log
Wed, Mar 19, 2025  8:49:48 AM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:50:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
dbebc7b
Wed, Mar 19, 2025  8:59:55 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += num;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
dedc33a
Wed, Mar 19, 2025  9:00:38 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += num;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
fc2ddc0
Wed, Mar 19, 2025  9:02:12 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60dfdad
Wed, Mar 19, 2025  9:04:23 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
8a3d72c
